[package]
name = "cookie-grab-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.21.4"
hex = "0.4.3"
obfstr = "0.4.3"
rusqlite = { version = "0.29.0", features = ["bundled"] }
zeroize = "1.6.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
windows = "0.51.1"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_System",
    "Win32_System_Com",
    "Win32_System_Memory",
]
